packages/typ/tests/fixtures/diagnostics/0160_adt_record_update_bool_field_04.ml
type rec_delta = { value : int; mark : bool }
let base_delta = { value = 3; mark = false }
let _ = { base_delta with mark = 4 }
